fixed header alignment

--- a/src/main/resources/static/histogram.css
+++ b/src/main/resources/static/histogram.css
@@ -1,7 +1,11 @@
 header {
     font-size: 1rem;
     padding: 1rem;
-    margin-left: 17%;
+    text-align: center;
+}
+
+header h1 {
+    padding-right:650px;
 }
 
 main {
